# latent-analysis

./: .gitignore  README.md  pyproject.toml
latent_analysis/: __init__.py  body_class.py  latent_analysis.py  lollipop_figure.py  wing_twist_class.py
notebook/: Latent_Variable_Analysis.ipynb
notebook/weights/: encoder_weights_latent_5.h5  muscle_decoder_weights_latent_5.h5  network_latent_5.h5  wingkin_decoder_weights_latent_5.h5
