[tool.poetry]
name = "latent-analysis"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Johan Melis <jmelis@caltech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "2.12.0"
keras = "2.12.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
notebook = "^7.0.3"
vtk = "^9.2.6"
geomdl = "^5.3.1"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
